Bug 473715 - Line/shape tools: KisPaintInformation::drawingAngleSafe() DirectionHistoryInfo object is not available
Summary: Line/shape tools: KisPaintInformation::drawingAngleSafe() DirectionHistoryInf...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2023-08-24 09:04 UTC by Alvin Wong
Modified: 2023-08-30 07:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2023-08-24 09:04:33 UTC
SUMMARY
When using the line tool, rectangle tool, ellipse tool, polygon tool or polyline tool with certain brushes, the console is flooded with the message:

    krita.general: KisPaintInformation::drawingAngleSafe() DirectionHistoryInfo object is not available

STEPS TO REPRODUCE
1. Select "c) Pencil-2" brush
2. Switch to line tool or other affected tools
3. Hover mouse cursor over the canvas

OBSERVED RESULT
Said message is continuously being emitted.

EXPECTED RESULT
Said message should not be emitted.

SOFTWARE/OS VERSIONS
Windows: 10
Commit: a763fc634a891af41dfc35f11b7b066716512323
Comment 1 Dmitry Kazakov 2023-08-30 07:58:52 UTC
Git commit 165992c517e4f1a225a0f1adb5a5da696d3b2876 by Dmitry Kazakov.
Committed on 30/08/2023 at 09:48.
Pushed by dkazakov into branch 'master'.

Fix a warning in outline generation code in shape tools

M  +23   -2    libs/ui/tool/kis_tool_paint.cc
M  +3    -0    libs/ui/tool/kis_tool_paint.h

https://invent.kde.org/graphics/krita/-/commit/165992c517e4f1a225a0f1adb5a5da696d3b2876
Comment 2 Dmitry Kazakov 2023-08-30 07:59:34 UTC
Git commit 4616984d1efe15bf501e4a973099830e64ceda6e by Dmitry Kazakov.
Committed on 30/08/2023 at 09:59.
Pushed by dkazakov into branch 'krita/5.2'.

Fix a warning in outline generation code in shape tools

M  +23   -2    libs/ui/tool/kis_tool_paint.cc
M  +3    -0    libs/ui/tool/kis_tool_paint.h

https://invent.kde.org/graphics/krita/-/commit/4616984d1efe15bf501e4a973099830e64ceda6e