Fix a warning in outline generation code in shape tools

BUG:473715