libs/ui/tool/kis_tool_paint.h
@@ -153,6 +153,9 @@ private:
 
     void tryRestoreOpacitySnapshot();
 
+    struct Private;
+    QScopedPointer<Private> m_d;
+
 Q_SIGNALS:
     void sigPaintingFinished();
 };
